# maintenance-building-prediction

./: .gitignore  DEPLOYMENT.md  Laravel_Projects_Analysis.md  README.md  README_FULL_BACKUP.md  USAGE_FOR_OTHER_ENTITIES.md  environment_template.env  pyproject.toml  requirements.txt  simple_test_generic.py  test_generic_pipeline.py
data/: generic_building_maintenance_sample.json  large_generic_sample.json
src/: __init__.py  config.py  schemas.py
src/api/: __init__.py  serve.py
src/pipelines/: __init__.py  prediction_pipeline.py  training_pipeline.py
src/steps/: __init__.py  data_ingestion.py  data_preprocessing.py  data_validation.py  model_deployment.py  model_evaluation.py  model_training.py
