[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "komuniteti-predictive-maintenance"
version = "0.1.0"
description = "ZenML pipeline for predictive maintenance in building management"
authors = [
    {name = "Komuniteti Team", email = "dev@komuniteti.com"}
]
dependencies = [
    "zenml[server]>=0.55.5",
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.24.4",
    "fastapi>=0.105.0",
    "uvicorn[standard]>=0.24.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "black>=23.12.0",
    "isort>=5.13.2",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
komuniteti-train = "src.pipelines.training_pipeline:main"
komuniteti-predict = "src.pipelines.prediction_pipeline:main"
komuniteti-serve = "src.api.serve:main" 